--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap'); */
 
 :root {
   --background: #ffffff;
@@ -25,7 +25,6 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: "Noto Sans KR", serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
